[gd_scene load_steps=2 format=2]

[ext_resource path="res://BloodGenerator.gd" type="Script" id=1]

[node name="BloodGenerator" type="Node2D"]
script = ExtResource( 1 )

[node name="BloodStopTimer" type="Timer" parent="."]
wait_time = 6.675
autostart = true

[node name="BloodTimer" type="Timer" parent="."]
wait_time = 0.411
autostart = true

[connection signal="timeout" from="BloodStopTimer" to="." method="_on_BloodStopTimer_timeout"]
[connection signal="timeout" from="BloodTimer" to="." method="_on_BloodTimer_timeout"]
